--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library Management System</title>
+  <title>Book Store Inventory System</title>
   <style>
     /* General Styles */
     body {
@@ -89,11 +89,11 @@
 <body>
 
 <div class="header">
-  <h1>📚 Library Management System</h1>
+  <h1>📚 Book Store Inventory System</h1>
   <div class="nav-buttons">
     <button onclick="loadPage('book-insert.html')">📖 Book Form</button>
     <button onclick="loadPage('customer-insert.html')">👤 Customer Form</button>
-    <button onclick="loadPage('supplier-insert.html')">🚛 Supplier Form</button>
+    <button onclick="loadPage('supplier-insert.html')">🚚 Supplier Form</button>
   </div>
 </div>
 
