--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -8,7 +8,7 @@
     /* General Styles */
     body {
         font-family: 'Poppins', sans-serif;
-        background: linear-gradient(to right, #6a11cb, #2575fc);
+        background: linear-gradient(to right, #2e2e2e, #4a4a4a);
         text-align: center;
         margin: 0;
         color: white;
